fix: revert content-visibility

--- a/src/global.css
+++ b/src/global.css
@@ -73,9 +73,3 @@
     }
   }
 }
-
-@layer utilities {
-  .content-vibility-auto {
-    content-visibility: auto;
-  }
-}
